<resources>
    <string name="app_name">Airs-LA</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="splash_screen">Splash Screen</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="or">OR</string>
    <string name="create_membership">Create Membership</string>
    <string name="login_label">LOG IN</string>
    <string name="register_bold_text">Become An AIRS-LA Member\nIT\'S FREE…</string>
    <string name="register_normal_text">An Entry Is Required In Each of the Following\nbefore you click \"Submit\"</string>
    <string name="first_name_label">First Name - text field below</string>
    <string name="first_name">First name</string>
    <string name="last_name_label">Last Name - text field below</string>
    <string name="last_name">Last name</string>
    <string name="email_address_label">E-mail Address - text field below</string>
    <string name="email_address">Email address</string>
    <string name="verify_email_label">Verify E-mail - text field below</string>
    <string name="verify_email">Verify email</string>
    <string name="gender_label">Your Gender - select from list below</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="transgender">Transgender</string>
    <string name="birth_label">Year of birth - text field below</string>
    <string name="birth">Year of Your Birth</string>
    <string name="career_label">Career Status - select from list below</string>
    <string name="employed">Employed</string>
    <string name="student">Student</string>
    <string name="retired">Retired</string>
    <string name="unemployed">Unemployed</string>
    <string name="other">Other</string>
    <string name="address_label">Where you live - select from the dropdown list below</string>
    <string name="vision_impairment_label">Vision Impairment - select from the list below</string>
    <string name="albinism">Albinism</string>
    <string name="cataracts">Cataracts</string>
    <string name="childhood_blindness">Childhood Blindness</string>
    <string name="corneal_opacity">Corneal Opacity</string>
    <string name="diabetic_retinopathy">Diabelic Retinopathy</string>
    <string name="dyslexia">Dyslexia</string>
    <string name="glaucoma">Glaucoma</string>
    <string name="lebers_amaurosis">Lebers Amaurosis</string>
    <string name="macular_degeneration">Macular Degeneration</string>
    <string name="neurological_vision_impairment">Neurological Vision Impairment</string>
    <string name="onchocerciasis">Onchocerciasis</string>
    <string name="optic_atrophy">Optic Atrophy</string>
    <string name="retinal_detachment">Retinal Detachment</string>
    <string name="retinitis_pigmentosa">Retinitis Pigmentosa</string>
    <string name="stargardts_disease">Stargardts Disease</string>
    <string name="trachoma">Trachoma</string>
    <string name="traumatic_head_injury">Traumatic Head Injury</string>
    <string name="vision_care_worker">Vision Care Worker</string>
    <string name="other_vision_impairment">Other Vision Impairment</string>
    <string name="who_affected_label">Who is affected - select from the list below</string>
    <string name="client">Client</string>
    <string name="family_member">Family Member</string>
    <string name="friend">Friend</string>
    <string name="yourself">Yourself</string>
    <string name="interested_label">Interested - Please select the topics that interest you (Check All That Apply)</string>
    <string name="assistive_technology">Assistive Technology</string>
    <string name="cooking_food"><![CDATA[Cooking & Food]]></string>
    <string name="diabetes">Diabetes</string>
    <string name="entertainment">Entertainment</string>
    <string name="health">Health</string>
    <string name="interviews">Interviews</string>
    <string name="kids_programs">Kids Programs</string>
    <string name="science">Science</string>
    <string name="seminars_on_vision">Seminars on Vision</string>
    <string name="sports">Sports</string>
    <string name="travel">Travel</string>
    <string name="vision_rehabilitation">Vision Rahabilitation</string>
    <string name="vision_development">Vision Development</string>
    <string name="other_interested">Other</string>
    <string name="certify">I certify that the above information is true</string>
    <string name="submit">Submit</string>
    <string name="register_label">REGISTER</string>
    <string name="main_menu_label">AIRS-LA</string>
    <string name="unregister_text">Confirm Email &amp; Password</string>
    <string name="unregister">Cancel Membership</string>
    <string name="password_menu_label">Password Help</string>
    <string name="forgot_password_text">We\'ll email it to you!</string>
    <string name="forgot_my_password">Forgot my Password</string>
    <string name="current_text">Current Email &amp; Password</string>
    <string name="new_text">New Password</string>
    <string name="confirm_password">Password (Confirm)</string>
    <string name="change_my_password">Change my Password</string>
    <string name="contact_text">AIRS-LA</string>
    <string name="call_button">Call AIRS_LA</string>
    <string name="email_button">Email AIRS-LA</string>
    <string name="contact_us">Contact Us</string>
    <string name="resource_button">Other Resources</string>
    <string name="about">About AIRS-LA</string>
    <string name="general_error_message">At Least One of the Required Inputs is Blank</string>
    <string name="error_message_email">Email Address Not in Valid Form</string>
    <string name="error_message_verify">Email and Email Verification Do Not Agree</string>
    <string name="error_message_interests">An Entry Is Required In Each of the Following\nbefore you click \"Submit\"</string>
    <string name="error_message_certify">You must certify that the above information is True</string>
    <string name="error_message_birth_after">Year of Birth Cannot Occur After</string>
    <string name="error_message_birth_before">Year of Birth Makes You Older than 110</string>
    <string name="error_message_already_member">You Are Already a Member</string>
    <string name="success_message_register">Your membership info has been submitted. Your temporary password is being sent to you via email.</string>
    <string name="error_message_unknown">There was an error occurred. Please check back later!</string>
    <string name="progress_message">Loading…</string>
    <string name="error_title_register">Signup Error</string>
    <string name="error_message_email_login">Please input correct email</string>
    <string name="error_title_login">Login Error</string>
    <string name="error_message_password_login">Please input password</string>
    <string name="error_message_login">Your Email Address or Password are incorrect</string>
    <string name="error_message_unregister_1">Your Email Address or Password are incorrect</string>
    <string name="error_title_unregister">Cancel Membership Error</string>
    <string name="error_message_unregister_2">Sorry, I Wasn\'t Able to Cancel Your Membership</string>
    <string name="error_message_unregister_3">Sorry, We Can\'t Cancel THAT Membership</string>
    <string name="message_unregister">Your membership has been cancelled.</string>
    <string name="title_unregister">Cancel Membership</string>
    <string name="title_register">Create Airs-LA Membership</string>
    <string name="error_message_forgot_email">Please input correct email</string>
    <string name="error_title_forgot">Retrieve Password Error</string>
    <string name="error_message_forgot">Sorry, That Email Address Isn\'t in Our System!</string>
    <string name="message_forgot">Your password has been Emailed to you.</string>
    <string name="title_forgot">Retrieve Password</string>
    <string name="error_message_change_email">Please input correct email</string>
    <string name="error_title_change">Change Airs-LA Password Error</string>
    <string name="error_message_change_old">Please input password</string>
    <string name="error_message_change_new">Please input new password</string>
    <string name="error_message_change_confirm">Please input confirm password</string>
    <string name="error_message_change_disagree">New Password and its Verification Do Not Agree</string>
    <string name="error_message_change">Your Email Address or Old Password are incorrect</string>
    <string name="title_change">Change Airs-LA Password</string>
    <string name="message_change">Your Airs-LA Password Has Been Changed!</string>
    <string name="address1">PO Box 571142</string>
    <string name="address2">Tarzana, CA 91357</string>
    <string name="error_message_internet">You are not connected to the Internet</string>
    <string name="error_message_unregister_email">Please input correct email</string>
    <string name="error_message_unregister_password">Please input password</string>
    <string name="error_title_message">Error</string>
    <string name="all_podcasts">All Podcasts</string>
    <string name="android_arrow">Android Arrow</string>
    <string name="description">Description</string>
    <string name="action_search">Search</string>
    <string name="error_message_timeout">Connection time out\nPlease try again later</string>
    <string name="info">Information icon</string>
    <string name="broadcast_background">Background for broadcasting</string>
    <string name="previous">Previous</string>
    <string name="add_to_favorites">Add to favorites</string>
    <string name="next">Next</string>
    <string name="play_pause">Play and Pause</string>
    <string name="podcast_categories">Podcast Categories</string>
    <string name="podcast">Podcasts</string>
    <string name="top_podcasts">Top 5 Podcasts</string>
    <string name="other_resources">Other Resources</string>
    <string name="choose_email">Choose an Email client:</string>
    <string name="error_message_already_exist">This podcast is already exist in your favorites.</string>
    <string name="message_title">AIRS-LA</string>
    <string name="broadcast_added">Broadcast added to favorites.</string>
    <string name="my_favorites">My Favorites</string>
    <string name="error_message_empty">You have no favorites.</string>
    <string name="speed">Speed button</string>
    <string name="rewind">Rewind 15 seconds</string>
    <string name="player_icon">Broadcast player icon</string>
    <string name="player_play">Player play button</string>
    <string name="player_rewind">Player rewind button</string>
    <string name="player_next">Player next button</string>
</resources>