<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/activity_vertical_margin"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:paddingTop="@dimen/activity_vertical_margin">

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:inputType="textEmailAddress"
            android:hint="@string/email"/>

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/email"
            android:inputType="textPassword"
            android:hint="@string/password"/>

        <ImageView
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/password"
            android:layout_marginTop="15dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/login"
            android:src="@drawable/login_button"
            android:onClick="login"/>

        <TextView
            android:id="@+id/or"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/login"
            android:layout_marginTop="15dp"
            android:text="@string/or"
            android:textSize="24sp"
            android:layout_centerHorizontal="true"/>

        <ImageView
            android:id="@+id/create_membership"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/or"
            android:layout_marginTop="15dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/create_membership"
            android:src="@drawable/register_button"
            android:onClick="register"/>

    </RelativeLayout>

</ScrollView>