<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/activity_vertical_margin"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/current_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/current_text"
            android:textSize="20sp"
            android:fontFamily="helvetica"
            android:gravity="center_horizontal"/>

        <EditText
            android:id="@+id/current_email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/current_text"
            android:inputType="textEmailAddress"
            android:hint="@string/email"/>

        <EditText
            android:id="@+id/current_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/current_email"
            android:inputType="textPassword"
            android:hint="@string/password"/>

        <TextView
            android:id="@+id/new_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/current_password"
            android:layout_marginTop="20dp"
            android:text="@string/new_text"
            android:textSize="20sp"
            android:fontFamily="helvetica"
            android:gravity="center_horizontal"/>

        <EditText
            android:id="@+id/new_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/new_text"
            android:inputType="textPassword"
            android:hint="@string/password"/>

        <EditText
            android:id="@+id/confirm_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/new_password"
            android:inputType="textPassword"
            android:hint="@string/confirm_password"/>

        <ImageView
            android:id="@+id/change_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/confirm_password"
            android:layout_marginTop="20dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/change_my_password"
            android:src="@drawable/change_button"
            android:onClick="submit"/>

    </RelativeLayout>

</ScrollView>