<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/activity_vertical_margin"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/unregister_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/unregister_text"
            android:textSize="20sp"
            android:fontFamily="helvetica"
            android:gravity="center_horizontal"/>

        <EditText
            android:id="@+id/unregister_email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/unregister_text"
            android:inputType="textEmailAddress"
            android:hint="@string/email"/>

        <EditText
            android:id="@+id/unregister_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/unregister_email"
            android:inputType="textPassword"
            android:hint="@string/password"/>

        <ImageView
            android:id="@+id/unregister_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/unregister_password"
            android:layout_marginTop="15dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/unregister"
            android:src="@drawable/unregister_button"
            android:onClick="unregister"/>

    </RelativeLayout>

</ScrollView>