<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/white"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/contact_us"
        android:src="@drawable/contact_us"/>

    <TextView
        android:id="@+id/contact_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="150dp"
        android:text="@string/contact_text"
        android:textSize="24sp"
        android:textStyle="bold"
        android:fontFamily="helvetica"/>

    <TextView
        android:id="@+id/address1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/contact_text"
        android:layout_centerHorizontal="true"
        android:textSize="24sp"
        android:fontFamily="helvetica"/>

    <TextView
        android:id="@+id/address2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/address1"
        android:layout_centerHorizontal="true"
        android:textSize="24sp"
        android:fontFamily="helvetica"/>

    <ImageView
        android:id="@+id/call_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/email_button"
        android:adjustViewBounds="true"
        android:contentDescription="@string/call_button"
        android:src="@drawable/call_button"
        android:onClick="call"/>

    <ImageView
        android:id="@id/email_button"
        android:paddingTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:adjustViewBounds="true"
        android:contentDescription="@string/email_button"
        android:src="@drawable/email_button"
        android:onClick="email"/>

</RelativeLayout>