<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/activity_vertical_margin"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/forgot_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/forgot_password_text"
            android:textSize="20sp"
            android:fontFamily="helvetica"
            android:gravity="center_horizontal"/>

        <EditText
            android:id="@+id/forgot_email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/forgot_text"
            android:inputType="textEmailAddress"
            android:hint="@string/email"/>

        <ImageView
            android:id="@+id/forgot_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/forgot_email"
            android:layout_marginTop="15dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/forgot_my_password"
            android:src="@drawable/forgot_button"
            android:onClick="submit"/>

    </RelativeLayout>

</ScrollView>