<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="horizontal"
              android:layout_width="match_parent"
              android:layout_height="wrap_content">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/item_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                android:maxLines="2"
                android:ellipsize="end"
                android:text="@string/description"
                android:textSize="18sp"/>

            <ImageView
                android:id="@+id/item_info"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:adjustViewBounds="true"
                android:contentDescription="@string/info"
                android:src="@drawable/info"/>

        </LinearLayout>

        <TextView
            android:id="@+id/item_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/darker_gray"
            android:textSize="16sp"
            android:ellipsize="end"
            android:maxLines="2"/>

        <TextView
            android:id="@+id/item_author"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/darker_gray"
            android:textSize="16sp"
            android:maxLines="1"
            android:ellipsize="end"/>

        <TextView
            android:id="@+id/item_duration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/darker_gray"
            android:textSize="16sp"
            android:maxLines="1"
            android:ellipsize="end"/>

    </LinearLayout>

    <ImageView
        android:id="@+id/item_arrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:contentDescription="@string/android_arrow"
        android:src="@drawable/ic_action_next_item"/>

</LinearLayout>